fixed header on Firefox

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html{
 
 	min-height:100%;
-	position:relative;
+	/*position:relative;*/
 }
 
 /* This sets the background image */
